# DLNT

./: .env.example  .env.v2.example  .gitignore  CREDENTIALS.md  Caddyfile  DLNT-v2-RFP-Final.md  README.md  architecture.mmd  dlnt.sh  docker-compose.v2.yaml  docker-compose.yaml
agent-ui/: Dockerfile  package-lock.json  package.json  server.js
alembic/: env.py
api/: Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_add_conversation_folder.py
api/app/: config.py  main.py
api/app/agent/: agents.py  engine.py  parser.py  prompts.py
api/app/db/: base.py  crud.py  models.py  session.py
api/app/llm/: base.py  ollama.py
api/app/models/: __init__.py  conversation.py  message.py  schemas.py
api/app/rag/: embedder.py  index_worker.py  indexer.py  retriever.py
api/app/routers/: __init__.py  agents.py  chat.py  conversations.py  files.py  rag.py  system.py  workspaces.py
api/app/tools/: base.py  code_exec.py  file_ops.py  memory_search.py  registry.py  shell_exec.py  web_fetch.py  web_search.py  whisper.py
config/: Modelfile  agents.yaml  allowed_commands.yaml  app.example.env  docker.example.env  models.yaml
db/: alembic.ini  init.sql
dsl/: agent_workflow.yml  agent_workflow_v2.yml  minutes_v2.yml  minutes_workflow.yml  research_agent.yml  task_agent.yml
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json
open-webui/: custom.css
scripts/: llamacpp-launcher.py  setup.sh  start-all.sh  stop-all.sh
searxng/: settings.yml
ssrf_proxy/: squid.conf.template
(+21 files in other folders)
