[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlnt-api"
version = "2.0.0"
description = "DLNT v2 API Server"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",

    # DB
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # HTTP client
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",

    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",

    # Embeddings (RAG)
    "sentence-transformers>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
